Refined messages feature. Cannot create duplicate rooms and will instead redirect to correct room. Added visual styling for active room.

--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -62,6 +62,10 @@
   background-color: #fafafa;
 }
 
+.userContainer.activeUser {
+  background-color: #efefef;
+}
+
 .userDetails {
   width: 100%;
   padding: 8px 12px;
