--- a/frontend/src/components/Comment/Comment.module.css
+++ b/frontend/src/components/Comment/Comment.module.css
@@ -3,6 +3,7 @@
     border-top: 1px solid #DBDBDB;
     display: flex;
     justify-content: space-between;
+    /* width: 100%; */
 }
 
 .cmContainer{
@@ -40,11 +41,11 @@
 }
 
 .textContainer{
-    width: 340px;
+    width: 307px;
 
 }
 .captionContainer{
-  width: 340px;
+  width: 307px;
   margin-bottom: 35px;
 
 }
@@ -100,7 +101,7 @@
 }
 
 .inputContainer{
-
+  width: 100%;
   height: 50px;
   display: flex;
   position: relative;
@@ -113,7 +114,7 @@
 }
 
 .commentInput{
-  width:300px;
+  width: calc(100% - 90px);
   border: none;
   outline: none;
   background-color: transparent;
@@ -121,7 +122,7 @@
 
 .postComment {
   width:50px;
-  height: 42px;
+  /* height: 42px; */
   align-self: center;
   color:rgb(53, 149, 246);
   font-size: 14px;
@@ -129,6 +130,7 @@
   border: none;
   font-weight:500;
   cursor: pointer;
+  justify-self: flex-end;
 }
 
 .disablePost {
