--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -83,3 +83,36 @@
   color: #8e8e8e;
   width: max-content;
 }
+
+.noConvo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  height: 100%;
+}
+
+.noConvo > h3 {
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 26px;
+}
+
+.noConvo > p {
+  font-size: 14px;
+  line-height: 18px;
+  color: #8e8e8e;
+}
+
+.noConvo > button {
+  background-color: #0095f6;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  height: 28px;
+  padding: 0 14px;
+  font-weight: 500;
+  font-size: 14px;
+  cursor: pointer;
+}
