--- a/frontend/src/components/Comment/Comment.module.css
+++ b/frontend/src/components/Comment/Comment.module.css
@@ -41,7 +41,7 @@
 }
 
 .textContainer{
-    width: 307px;
+    width: 300px;
 
 }
 .captionContainer{
@@ -62,6 +62,7 @@
   margin-left: 5px;
   word-wrap: break-word;
   word-break: break-all;
+  /* padding-right: 30px; */
 }
 
 /* .caption{
@@ -81,6 +82,7 @@
   cursor: pointer;
   font-weight: 500;
   align-self: center;
+
 }
 
 .replyContainer{
