--- a/frontend/src/components/Posts/PostPreview.module.css
+++ b/frontend/src/components/Posts/PostPreview.module.css
@@ -12,6 +12,8 @@
   font-size: 14px;
   gap: 4px;
   line-height: 18px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .captionContainer a {
